2025-07-06T01:01:30Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16093743264 # 696
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-06
* notice: last 14d: unq all: 5 12
* notice: prev accum: outdated-unq outdated-all / unq all: 858 1336 / 870 1348
* notice: next accum: outdated-unq outdated-all / unq all: 859 1337 / 871 1349
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-06-22] / [2025-07-05]

2025-07-05T00:53:55Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16082905863 # 695
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-05
* notice: last 14d: unq all: 5 12
* notice: prev accum: outdated-unq outdated-all / unq all: 857 1335 / 868 1346
* notice: next accum: outdated-unq outdated-all / unq all: 858 1336 / 870 1348
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-06-21] / [2025-07-04]

2025-07-04T00:55:58Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16063436569 # 694
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-04
* notice: last 14d: unq all: 4 11
* notice: prev accum: outdated-unq outdated-all / unq all: 856 1334 / 866 1344
* notice: next accum: outdated-unq outdated-all / unq all: 857 1335 / 868 1346
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2025-06-20] / [2025-07-03]

2025-07-03T00:56:19Z: