@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-07-06T01:01:30Z",
-  "count_outdated" : 1337,
-  "uniques_outdated" : 859,
-  "count" : 1349,
-  "uniques" : 871,
+  "timestamp" : "2025-07-07T01:00:31Z",
+  "count_outdated" : 1338,
+  "uniques_outdated" : 860,
+  "count" : 1350,
+  "uniques" : 872,
   "clones" : [
-    {
-      "timestamp": "2025-06-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-06-25T00:00:00Z",
       "count": 1,
@@ -88,6 +79,15 @@
     },
     {
       "timestamp": "2025-07-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-07-06T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
