@@ -3,11 +3,6 @@
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2025-06-23T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-06-25T00:00:00Z",
       "count": 1,
       "uniques": 1
@@ -49,6 +44,11 @@
     },
     {
       "timestamp": "2025-07-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-07-06T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
